[package]
name = "ktls-poc"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]

[dependencies]
libc = "*"
byteorder = "*"
webpki = { git = "https://github.com/briansmith/webpki" }
rustls = { git = "https://github.com/quininer/rustls", branch = "pub-secrets" }

[dev-dependencies]
webpki-roots = { git = "https://github.com/briansmith/webpki-roots", branch = "webpki-github" }
